--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://philszalay.github.io/Interactive-Cube-Game/",
+  "homepage": "https://philszalay.github.io/threejs-boilerplate/",
   "scripts": {
     "build": "webpack --mode=production --config ./bundler/webpack.prod.js",
     "dev": "webpack serve --mode=development --config ./bundler/webpack.dev.js",
