--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "homepage": "https://philszalay.github.io/threejs-boilerplate/",
   "scripts": {
     "build": "webpack --mode=production --config ./bundler/webpack.prod.js",
+    "buildForGithub": "webpack --mode=production --env github=true --config ./bundler/webpack.prod.js",
     "dev": "webpack serve --mode=development --config ./bundler/webpack.dev.js",
-    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
